fix(ffe-header): set z-index on `.ffe-header` root
fixes #436

--- a/packages/ffe-header/less/ffe-header.less
+++ b/packages/ffe-header/less/ffe-header.less
@@ -4,6 +4,7 @@
 
     background: @ffe-white;
     text-align: center;
+    z-index: 999;
 
     &__user-nav-list--visible,
     &__site-nav-list--visible {
